# rust-study-project-01

./: .gitignore  .mvv_account_soa.env  .mvv_account_web.env  .mvv_client_search_soa.env  .web_main_1.env  Cargo.toml  Makefile.toml  README.md  build.rs  rust-toolchain.toml
_subpackages/tuple_heter_iter/: Cargo.toml
_subpackages/tuple_heter_iter/src/: lib.rs
account_soa/: .env  Cargo.toml  Makefile.toml  README.md  build.rs_1
account_soa/docker/: Dockerfile  Dockerfile-local  Dockerfile_01  Dockerfile_02  Dockerfile_03  Dockerfile_04  README.md  docker-compose.yml
account_soa/src/: cfg.rs  database.rs  entity.rs  lib.rs  service.rs  ssl_config.rs
account_soa/src/adder/: adder.rs
account_soa/src/entities/: account.rs  amount.rs  currency.rs  investigation.rs  mod.rs
account_soa/src/entity/: account.rs  iban.rs  id.rs  investigation.rs  user.rs
account_soa/src/rest/: account_rest.rs  app_dependencies.rs  auth.rs  dto.rs  error_rest.rs  investigation.rs  path.rs  web_app.rs
account_soa/src/service/: account_service.rs  user_service.rs
account_soa/src/web/: auth.rs
account_soa/src/web_server/: main_web.rs
account_soa/templates/: protected-01.html
account_soa/tests/: account_test.rs  amount_test.rs  another_static_error_macro_test.rs  backtrace_test.rs  channels_test.rs  closures_test.rs  default_test.rs  dto_test.rs  enums_test.rs  error_test.rs  for_each_by_ref_test.rs  format_usage_test.rs  integration_soa_test.rs  investigation_arc_vs_rc_performance_test.rs  investigation_enums_test.rs  investigation_error_test.rs  investigation_format_usage_test.rs  investigation_inherent_test.rs  investigation_move_struct_field_test.rs  investigation_print_enum_debug_test.rs  investigation_strings_test.rs  investigation_test_ignore_test.rs  macro1_test.rs  obj_ext_test.rs  print_enum_debug_test.rs  serde_json_bd_test.rs  soa_test.rs  strings_test.rs  test_util_test.rs  tuple_test.rs  tuple_test2.rs  type_path_usage_test.rs  type_rules_test.rs  unchecked_test.rs  uuid_gen.rs
account_soa/tests/errors/: mod.rs
account_web/: Cargo.toml  Makefile.toml  README.md  build.rs  pom.xml
account_web/docker/: Dockerfile  Dockerfile-local  docker-compose.yml
account_web/src/: app.rs  app_dependencies.rs  auth.rs  cfg.rs  error.rs  grpc_dependencies.rs  lib.rs  mvc.rs  rest_dependencies.rs  service.rs  web_app.rs
account_web/src/auth/: auth_layer.rs  backend.rs  login_form.rs  oauth.rs  sql_client_auth_provider.rs  user.rs  user_perm_provider.rs
account_web/src/mvc/: action_client_accounts.rs
account_web/src/rest_dependencies/: account_soa.rs
account_web/src/service/: account_service.rs  client_search_model.rs  client_search_service.rs
account_web/templates/: client_accounts.html  error_page.html  login.html
account_web/tests/: account_soa_client_test.rs  integration_web_test.rs
auth/: Cargo.toml  Makefile.toml
auth/src/: backend.rs  client.rs  error.rs  extract.rs  lib.rs  permission.rs  psw.rs  psw_hash.rs  route.rs  secure_str.rs  thirdparty.rs  user_id.rs  user_provider.rs  util.rs
auth/src/backend/: axum_login_delegatable.rs  client_cert_auth.rs  http_basic_auth.rs  login_form_auth.rs  oauth2_auth.rs  psw_auth.rs
auth/src/examples/: auth_user.rs  composite_auth.rs
auth/src/grpc/: client.rs  server.rs
auth/src/permission/: empty_perm_provider.rs  predefined.rs  util.rs
auth/src/user_provider/: mem_user_provider.rs
auth/src/util/: backend_dyn_wrap.rs  composite_util.rs  test_unwrap.rs
auth/tests/: psw.rs  psw_hash_test.rs  psw_test.rs
client_search_grpc_soa/: Cargo.toml  Makefile.toml  README.md  build.rs
client_search_grpc_soa/docker/: Dockerfile-local  docker-compose.yml
client_search_grpc_soa/proto/: mvv.client.search.proto  mvv_client_search.proto
client_search_grpc_soa/proto/mvv/: role.options.proto
client_search_grpc_soa/src/: app.rs  auth.rs  cfg.rs  client.rs  client_search_service.rs  dependencies.rs  generated.rs  grpc.rs  grpc_auth.rs  health_check.rs  lib.rs  schema.rs  server.rs  stream_static_wrapper.rs
client_search_grpc_soa/src/auth/: backend.rs  user.rs  (+1 more)
client_search_grpc_soa/tests/: integration_client_search_grpc_soa.rs
common/: Cargo.toml  Makefile.toml
common/src/: backtrace.rs  backtrace2.rs  backtrace_old.rs  cache.rs  cfg.rs  client_auth_cert_info.rs  client_cert_auth.rs  db.rs  entity.rs  env.rs  error.rs  exe.rs  fmt.rs  futures.rs  gen_src.rs  grpc.rs  io.rs  lib.rs  map.rs  net.rs  obj.rs  option_ext.rs  progenitor.rs  proto_files.rs  rest.rs  rustls_acceptor_2.rs  rustls_acceptor_with_con_info.rs  secure.rs  server.rs  server_conf.rs  soa.rs  string.rs  test.rs  thirdparty.rs  utoipa.rs  uuid.rs
common/tests/: amount_ops_test.rs  amount_test.rs  currency_test.rs  err_bt_test.rs  integration_test.rs
common_bank_entities/: Cargo.toml  Makefile.toml  build.rs
common_bank_entities/src/: amount.rs  bd.rs  currency.rs  error.rs  id.rs  lib.rs
common_bank_entities/tests/: amount_ops_test.rs  amount_test.rs  currency_test.rs  err_bt_test.rs
common_it_test/: Cargo.toml  Makefile.toml
common_it_test/src/: coverage.rs  docker_compose.rs  docker_compose_util.rs  integration.rs  lib.rs  prepare_test_docker_compose.rs  thirdparty.rs  yaml.rs
common_it_test/tests/: integration_test.rs
diff_ver_crates/sqlx_07/: Cargo.toml  Makefile.toml
diff_ver_crates/sqlx_08/: Cargo.toml  Makefile.toml
diff_ver_crates/sqlx_postgres_07/: Cargo.toml  Makefile.toml
diff_ver_crates/sqlx_postgres_08/: Cargo.toml  Makefile.toml
error_macro/: Cargo.toml  Makefile.toml
error_macro/src/: bt.rs  error_source.rs  lib.rs  macro_util.rs  struct_error.rs  this_error_bt_src_ext.rs  this_error_ext.rs
health_check/: Cargo.toml  Makefile.toml
health_check/src/: lib.rs
src/: auth.rs  (+10 more)
tuple_heter_iter/: Cargo.toml  Makefile.toml
tuple_heter_iter/src/: compile_log_macros.rs  lib.rs
tuple_heter_iter_macro/: Cargo.toml  Makefile.toml
tuple_heter_iter_macro/src/: feature_cfg.rs  generate_tuple_op_types.rs  lib.rs  tuple_for_each.rs
xtask/: Cargo.toml  Makefile.toml  README.md
xtask/src/: main.rs  touch_files.rs
(+376 files in other folders)
