
[workspace]
members = [
    "tuple_heter_iter_macro",
    "tuple_heter_iter",
    "proc_macro",
    "static_error_macro",
    "auth",
    "common",
    "account_soa",
    "account_web",
]
#resolver = "1"
resolver = "2"


# With changed reqwest from version 11 to 12. Otherwise project is not compiled :-(
[patch.crates-io]
progenitor = { version = "0.7.0", path = "./../tirdparty/progenitor/progenitor" }
progenitor-client = { version = "0.7.0",  path = "./../tirdparty/progenitor/progenitor-client" }
