
[workspace]
members = [
    "xtask",
    "tuple_heter_iter_macro",
    "tuple_heter_iter",
    "proc_macro",
    "error_macro",
    "auth",
    "common",
    "account_soa",
    "account_web",
]
#resolver = "1"
resolver = "2"


# With changed reqwest from version 11 to 12. Otherwise, project is not compiled :-(
[patch.crates-io]


[workspace.metadata.patch-replace-sub-dependencies.progenitor]
replace = [ { sub_dep = "reqwest", from_ver = "0.11.27", to_ver = "0.12.5" } ]
[workspace.metadata.patch-replace-sub-dependencies.progenitor-impl]
replace = [ { sub_dep = "reqwest", from_ver = "0.11.27", to_ver = "0.12.5" } ]
[workspace.metadata.patch-replace-sub-dependencies.progenitor-client]
replace = [ { sub_dep = "reqwest", from_ver = "0.11.27", to_ver = "0.12.5" } ]



[patch.crates-io.progenitor]
version = "0.7.0"
path = "target/patch-override-sub-dep/progenitor/progenitor-0.7.0"

[patch.crates-io.progenitor-impl]
version = "0.7.0"
path = "target/patch-override-sub-dep/progenitor-impl/progenitor-impl-0.7.0"

[patch.crates-io.progenitor-client]
version = "0.7.0"
path = "target/patch-override-sub-dep/progenitor-client/progenitor-client-0.7.0"
