[package]
name = "mvv_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Defines a feature named `webp` that does not enable any other features.
#error_generic_member_access = []

ambassador = [ "dep:ambassador" ]
default = [ "ambassador", ]
#default = [ ]



[build-dependencies]
cargo_metadata = "0.18.1"


[dependencies]
mvv_error_macro = { version = "0.1.0", path = "../error_macro" }
mvv_tuple_heter_iter_macro = { version = "0.1.0", path = "../tuple_heter_iter_macro" }
mvv_tuple_heter_iter = { version = "0.1.0", path = "../tuple_heter_iter" }
mvv_common = { version = "0.1.0", path = "../common" }

# -------------------------------------------------------------------------
if_chain = "1.0.2"
forr = "0.2.3"

static_assertions = "1.1.0"
#const_format = "0.2.32"

trait-variant = "0.1.2"

serde = { version = "1.0.201", features = ["derive", "std", "rc", "serde_derive" ] }
#serde_json = { version = "1.0.117", features = ["default", ] }
#serde_with = "3.8.1"
#serde_with_macros = "3.8.1"

anyhow = { version = "1.0.83" } #, features = ["backtrace"] }
#anyhow = { version = "1.0.83"} # , features = ["backtrace"] } // it means third-party "backtrace"
thiserror = "1.0.60"
#snafu = "0.8.2"
indoc = "2.0.5"

## !!! Out dated !!!
## !!! backtrace = "0.3.71"

strum = "0.26"
strum_macros = "0.26"

# # Seems it does not work.
# color-backtrace = "0.6.1"

# derivative = "2.2.0"

#ctor = "0.2.8"
#once_cell = "1.19.0"
#lazy_static = "1.4.0"
#static_init = "1.0.3"

log = "0.4.21"
#env_logger = "0.11.3"
#log4rs = "1.3.0"
#tracing = "0.1.40"
tracing = {  version = "0.1.40", features = ["attributes", "log", ] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-futures = "0.2.5"
#tracing-log = "0.2.0"
#tracing-attributes = "0.1.27"
tracing-timing = "0.6.0"

dotenv = "0.15.0"

inherent = "1.0.11"
readonly = "0.2.12"
extension-trait = "1.0.2"
ambassador = { version = "0.4.0",  optional = true }
implicit-clone = {  version = "0.4.9", features = ["default", "derive", "implicit-clone-derive"] }

num = "0.4.3"
nutype = "0.4.2"
uuid = "1.10.0"

#chrono = {  version = "0.4.38", features = ["default", "serde"] }
#chrono-tz = "0.9.0"
#time = "0.3.36"

#type-rules = { version = "0.2.3", features = ["derive", "regex", "serde"] }
# ??? type-rules = { version = "0.2.3", features = ["derive", "regex"] }

axum = "0.7.5"
async-trait = "0.1.80"
#axum = {  version = "0.7.5", features = ["default", "tracing", ] }
#tower = "0.4.13"
tower = {  version = "0.4.13", features = ["full"] }
#tower-http = "0.5.2"
tower-http = {  version = "0.5.2", features = ["default", "trace", "tracing"] }
tower-async-http = "0.2.0"

axum-login = {  version = "0.15.2" }
oauth2 = "4.4.2"
# support for Argon2, PBKDF2, and scrypt password hashing algorithms
password-auth = "1.0.0"

#axum-auth = "0.7.0"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
axum-ctx = "0.4.0"
axum-typed-routing = "0.2.1"
axum_session_auth = "0.14.0"
axum_static = "1.7.1"
#axum-valid = "0.18.0"
validator = {  version = "0.18.1", features = ["derive", "validator_derive"] }
#axum_typed_multipart = "0.11.1"
#axum_static_include = "0.3.0"
jsonwebtoken = "9.3.0"

#tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread"] }
#tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio = { version = "1.38.0", features = ["full"] }
tokio-test = "0.4.4"
#tokio-async-await-test = "0.1.0"
#bytes = "1.6.0"

http = "1.1.0"
# http library
hyper = "1.3.1"
reqwest = { version = "0.12.4", features = ["json"] }
url = "2.5.1"

sqlx = { version = "0.7.4", features = ["sqlite", "time", "runtime-tokio"] }


askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"

#inline-xml = "0.3.2"
## similars
#xml-macro = "0.2.0"
#quick-xml = "0.32.0"

itertools = "0.13.0"
by_address = "1.2.1"


# unused manifest key: tests
#[test]
[tests]

#autotests = false
#
#[[test]]
#name = "test_token_trees"
#path = "tests/test_token_trees.rs"
#
#[[test]]
#name = "test_parse_buffer"
#path = "tests/test_parse_buffer.rs"



[dev-dependencies]
#mockall = "0.12.1"
#test-case = "3.3.1"
#test-case = "2.2.2"
test-case = "*"
assertables = "7.0.1"

#assert_json = "0.1.0"
assert-json-diff = "2.0.2"
#jsondiff = "0.1.0"

#assert-str = "0.1.0"
#assert-text = "0.2.9"
#assert_eq_all = "0.1.1"
#assert_fn = "1.0.7"
#assert_json = "0.1.0" // requires 'thiserror v1.0.60 (*)'
#assert-call = "0.1.1"
#assert_no_alloc = "1.1.2"
#assert_approx_eq = "1.1.0"
#assert_that = "0.1.2"
#assert_panic_free = "1.0.2"
#assert_matches = "1.5.0"

# # Seems it does not work.
# color-backtrace = "0.6.1"
# ctor = "0.2.8"

macro_rules_attribute = "0.2.0"

# hm... unused manifest key: benches
[benches]

#autobenches = false
#
#[[bench]]
#name = "rust"
#path = "benches/rust.rs"
#harness = false
#required-features = [
#    "full",
#    "parsing",
#]
#
#[[bench]]
#name = "file"
#path = "benches/file.rs"
#required-features = [
#    "full",
#    "parsing",
#]




#[workspace]
#members = [
#    "error_macro",
#]
